feat(docs): synchronized documentation with code
